<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sumeetjain.start_alarm.ringActivity">
    <TextView
        android:id="@+id/ringing"
        android:fontFamily="Comic Sans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/ringing" />
    <ImageView
        android:id="@+id/image_Alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"/>
    <Button
        android:id="@+id/button_cancel"
        android:layout_marginLeft = "30dp"
        android:layout_marginRight = "30dp"
        android:layout_marginTop = "50dp"
        android:layout_marginBottom = "30dp"
        android:textColor="@color/white"
        android:background="@color/light_green"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ringing"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/buttoncancel"
        android:onClick="ringCancel" />



</RelativeLayout>
