<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/ringtime"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="15sp"
            android:text="@string/ringtime" />

        <TextView
            android:id="@+id/ringtime_blank"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/ringtime"
            />
        <Button
            android:id="@+id/button1"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/lightred"
            android:text="@string/setting_time"
            android:onClick="showTimePickerDialog"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/linear1"
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/ringdate"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="15sp"
            android:text="@string/ringdate"/>

        <TextView
            android:id="@+id/ringdate_blank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/ringdate"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button2"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightred"
            android:text="@string/setting_date"
            android:onClick="showDatePickerDialog"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/linear2"
        android:id="@+id/linear3"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/ringcontent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/ringcontent" />
        <EditText
            android:id="@+id/ringcontent_text"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/lightred"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:hint="@string/ringcontent" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/linear3"
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

            <TextView
                    android:id="@+id/ringselect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/ringselect" />
            <TextView
                    android:id="@+id/ringname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textIsSelectable="true"
                    android:hint="@string/ringname" />
            <Button
                    android:id="@+id/button_ringselect"
                    android:background="@color/lightred"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/button_ringselect"
                    android:onClick="selectRingtone"/>
    </LinearLayout>

    <LinearLayout
            android:layout_below="@id/linear4"
            android:id="@+id/linear6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="1">
             <TextView
                    android:textSize="15sp"
                    android:id="@+id/Text_setVibrate"
                    android:layout_height="33dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/setvibrate"/>

            <ToggleButton
                    android:id="@+id/Vibrate_set"
                    android:textSize="15sp"
                    android:background="@color/light_green"
                    android:layout_marginLeft="10dp"
                    android:layout_width="71dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:onClick="setVibrate"
                android:checked="false" />
            <TextView
                    android:textSize="15sp"
                    android:id="@+id/Text_setring"
                    android:layout_marginLeft="47dp"
                    android:layout_width="53dp"
                    android:layout_height="62dp"
                    android:textColor="@color/black"
                    android:text="@string/ringset" />
            <ToggleButton
                    android:id="@+id/Ring_set"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:background="@color/light_green"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setRing"
                android:checked="false" />

    </LinearLayout>
     <Button
            android:id="@+id/saveData"
            android:background="@color/lightblue"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="SAVE VALUES"/>

</LinearLayout>

